# wallet

./: .env.example  .gitignore.security  .prettierignore  API_ENDPOINTS.md  Cargo.toml  DEVELOPMENT_PLAN.md  IMPLEMENTATION_SUMMARY.md  LICENSE-APACHE  LICENSE-MIT  MOBILE_BUILD_GUIDE.md  README.md  SETUP_GUIDE.md  UI_IMPLEMENTATION_PLAN.md  angular.json  audit_actions.md  build-wasm.sh  package-lock.json  package.json  rebuilding.md  tsconfig.json
.github/: dependabot.yml
src/: index.html  security.toml  styles.scss
src-tauri/: Cargo-full.toml  Cargo-wasm.toml  Cargo.toml  build-mobile.sh  tauri.conf.json
src-tauri/icons/: README.md
src-tauri/src/: app_state.rs  blockchain.rs  blockchain_client.rs  config_store.rs  crypto.rs  errors.rs  lib.rs  main.rs  runtime.rs  security.rs  session.rs  validation.rs
src-tauri/src/api/: types.rs
src-tauri/src/storage/: mod.rs  paths.rs  vault.rs
src-tauri/tests/: wallet_flow.rs
src-tauri/wasm/: Cargo.toml
src-tauri/wasm/src/: balance_tracker.rs  chart_renderer.rs  crypto_operations.rs  lib.rs  name_resolver.rs  simple.rs  state_aggregator.rs  transaction_fetcher.rs  zkbridge.rs
src/app/: app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  app.config.ts  app.routes.ts
src/app/core/services/: biometric.service.ts  challenge.service.ts  enhanced-wallet.service.ts  global-error-handler.service.ts  governance.service.ts  logging.service.ts  modal.service.ts  nuw-challenge.service.ts  payment-request.service.ts  rpc.service.ts  security-config.service.ts  session-storage.service.ts  tauri.service.ts  theme.service.ts  transaction.service.ts  wallet-backend.interface.ts  wallet-backend.service.tauri.ts  wallet-backend.service.ts  wallet.service.ts  wasm.service.ts  zk-bridge.service.ts
src/app/core/services/legacy/: enhanced-wallet.service.ts  wasm-loader.service.ts
src/app/core/types/: payment-request.types.ts  wallet.types.ts
src/app/core/ui/modal-host/: modal-host.component.html  modal-host.component.scss  modal-host.component.ts
src/app/core/ui/theme-toggle/: theme-toggle.component.scss  theme-toggle.component.ts
src/app/core/ui/unlock-wallet/: unlock-wallet.component.html  unlock-wallet.component.scss  unlock-wallet.component.ts
src/app/core/utils/: input-validator.ts
src/app/features/governance/: create-proposal.component.ts  create-proposal.html  create-proposal.scss  governance.html  governance.scss  governance.spec.ts  governance.ts  proposal-detail.component.ts  proposal-detail.html  proposal-detail.scss  proposal-list.component.ts  proposal-list.html  proposal-list.scss  voting-power.component.ts  voting-power.html  voting-power.scss
src/app/features/settings/: settings.html  settings.scss  settings.ts
src/app/features/staking/: staking.html  staking.scss  staking.spec.ts  staking.ts
src/app/features/transactions/: receive-transaction.component.html  receive-transaction.component.scss  receive-transaction.component.ts  send-transaction.component.html  send-transaction.component.scss  send-transaction.component.ts  transactions.html  transactions.scss  transactions.spec.ts  transactions.ts
src/app/features/wallet/: wallet.html  wallet.scss  wallet.spec.ts  wallet.ts
src/app/types/: wasm.d.ts
src/app/utils/: wasm-test.ts
src/assets/wasm/: .gitignore  build-info.json  chert_wallet_wasm.d.ts  chert_wallet_wasm.js  chert_wallet_wasm_bg.wasm.d.ts  package.json
