[package]
name = "silica-wallet-wasm"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Silica Wallet WebAssembly modules for high-performance blockchain operations"
authors = ["Silica Protocol Team"]

[lib]
crate-type = ["cdylib"]

[dependencies]
# WebAssembly dependencies
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
  "console",
  "Window",
  "Performance",
] }

# Console error panic hook for better error messages in browser
console_error_panic_hook = { version = "0.1", optional = true }

# Simple dependencies for basic functionality
getrandom = { version = "0.2", features = ["js"] }

# Bridge Proofs - Git dependencies
zkbridge-proofs = { git = "https://github.com/Silica-Protocol/protocol", branch = "main" }
halo2_proofs = { git = "https://github.com/Silica-Protocol/halo2.git", branch = "poseidon2", default-features = false }
halo2_gadgets = { git = "https://github.com/Silica-Protocol/halo2.git", branch = "poseidon2" }
halo2_poseidon2 = { git = "https://github.com/Silica-Protocol/halo2.git", branch = "poseidon2" }
pasta_curves = "0.5"

[dependencies.wee_alloc]
version = "0.4.5"
optional = true

[features]
default = ["console_error_panic_hook"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Os", "--enable-simd"]

[dev-dependencies]
wasm-bindgen-test = "0.3"